--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "storybook-dark-mode": "^4.0.2",
     "stylelint": "^16.20.0",
     "stylelint-config-standard-scss": "^15.0.1",
+    "terser": "^5.43.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.34.0",
     "vite": "^6.3.5",
